--- a/models/adventureworks/sources.yml
+++ b/models/adventureworks/sources.yml
@@ -45,3 +45,6 @@ sources:
       - name: person
         columns:
           - name: personid
+      - name: businessentitycontact
+        columns:
+          - name: businessentityid
